{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 11,
  "lineage": "855fd860-3dc2-ae9b-ff84-6db8cf37c73a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "proj-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091efebd98bf060e1",
            "arn": "arn:aws:ec2:us-east-1:025707650139:elastic-ip/eipalloc-091efebd98bf060e1",
            "association_id": "eipassoc-01dea76f1efae75fa",
            "domain": "vpc",
            "id": "eipalloc-091efebd98bf060e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ab76dacb26b135ef",
            "private_dns": "ip-10-81-1-57.ec2.internal",
            "private_ip": "10.81.1.57",
            "public_dns": "ec2-98-86-6-40.compute-1.amazonaws.com",
            "public_ip": "98.86.6.40",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "proj-eip"
            },
            "tags_all": {
              "Name": "proj-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.proj-nic",
            "aws_security_group.proj-sg",
            "aws_subnet.proj-sub",
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proj-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa3fe0fa7920f68e",
            "arn": "arn:aws:ec2:us-east-1:025707650139:instance/i-031c7ad5571d8b99d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031c7ad5571d8b99d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ab76dacb26b135ef"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0ab76dacb26b135ef"
              }
            ],
            "primary_network_interface_id": "eni-0ab76dacb26b135ef",
            "private_dns": "ip-10-81-1-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.81.1.57",
            "public_ip": "98.86.6.40",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00aa8b15b5b04e6c9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b53c8194162ca56",
            "tags": {
              "Name": "proj-ec2"
            },
            "tags_all": {
              "Name": "proj-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e55b826510945810"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025707650139",
            "id": "i-031c7ad5571d8b99d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.proj-nic",
            "aws_security_group.proj-sg",
            "aws_subnet.proj-sub",
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proj-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025707650139:internet-gateway/igw-0207b9126319d3147",
            "id": "igw-0207b9126319d3147",
            "owner_id": "025707650139",
            "region": "us-east-1",
            "tags": {
              "Name": "proj-igw"
            },
            "tags_all": {
              "Name": "proj-igw"
            },
            "vpc_id": "vpc-045efcb3d359b1c7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "proj-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025707650139:network-interface/eni-0ab76dacb26b135ef",
            "id": "eni-0ab76dacb26b135ef",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:53:53:fc:a9:7b",
            "owner_id": "025707650139",
            "private_ip": "10.81.1.57",
            "private_ip_list": [
              "10.81.1.57"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.81.1.57"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e55b826510945810"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b53c8194162ca56",
            "tags": {
              "Name": "proj-nic"
            },
            "tags_all": {
              "Name": "proj-nic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.proj-sg",
            "aws_subnet.proj-sub",
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "proj-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025707650139:route-table/rtb-0bbcad902b755d013",
            "id": "rtb-0bbcad902b755d013",
            "owner_id": "025707650139",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0207b9126319d3147",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proj-rt"
            },
            "tags_all": {
              "Name": "proj-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045efcb3d359b1c7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025707650139",
            "id": "rtb-0bbcad902b755d013",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.proj-igw",
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "proj-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c9a29a70a6b01b",
            "region": "us-east-1",
            "route_table_id": "rtb-0bbcad902b755d013",
            "subnet_id": "subnet-00b53c8194162ca56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.proj-igw",
            "aws_route_table.proj-rt",
            "aws_subnet.proj-sub",
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proj-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025707650139:security-group/sg-0e55b826510945810",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e55b826510945810",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251121080334164200000001",
            "name_prefix": "terraform-",
            "owner_id": "025707650139",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proj-sg"
            },
            "tags_all": {
              "Name": "proj-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045efcb3d359b1c7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025707650139",
            "id": "sg-0e55b826510945810",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "proj-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025707650139:subnet/subnet-00b53c8194162ca56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.81.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b53c8194162ca56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025707650139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "proj-subnet"
            },
            "tags_all": {
              "Name": "proj-subnet"
            },
            "vpc_id": "vpc-045efcb3d359b1c7e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025707650139",
            "id": "subnet-00b53c8194162ca56",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.proj-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proj-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025707650139:vpc/vpc-045efcb3d359b1c7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-0340bf0af031b24f1",
            "default_route_table_id": "rtb-0e45004027344f0b8",
            "default_security_group_id": "sg-015eb4685d63e3f0a",
            "dhcp_options_id": "dopt-0f9a99f2d2cc63ee8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045efcb3d359b1c7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e45004027344f0b8",
            "owner_id": "025707650139",
            "region": "us-east-1",
            "tags": {
              "Name": "proj-vpc"
            },
            "tags_all": {
              "Name": "proj-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "025707650139",
            "id": "vpc-045efcb3d359b1c7e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}